# Advanced-Machine-Learning-Project-Wild-fire-

./: .gitignore  Dockerfile  LICENSE  README.md  df_aggregated.py  preprocess_data.ipynb  pyproject.toml  requirements.txt  use_case.ipynb  xgboost_from_scratch.py
.github/workflows/: docker.yml
k8s/: deployment.yaml  ingress.yaml
src/api/: main.py
src/data/: df_aggregated.py
src/models/: node.py  registry_loader.py  train.py  tree.py
