[project]
name = "WildFirePrediction"
version = "0.1.0"
description = "MLOps Project - Wildfire Prediction"
dependencies = [
    "fastapi>=0.136.0",
    "mlflow>=3.11.1",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N806", "N803", "E501"] 
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
